--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.x  # Replace with your Flutter version
+          flutter-version: 3.22.2 # Replace with your Flutter version
 
       - name: Install dependencies
         run: flutter pub get
